// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "marginBottom": 10,
      "padding": 15,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <NetworkImage
      source={
        Object {
          "uri": null,
        }
      }
      style={
        Object {
          "borderRadius": 2,
          "height": 80,
          "width": 60,
        }
      }
    />
    <View
      style={
        Object {
          "alignSelf": "center",
          "flex": 1,
          "paddingHorizontal": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#30363d",
            "fontSize": 14,
            "fontWeight": "800",
          }
        }
      >
        Room
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders without crashing with missing data 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "marginBottom": 10,
      "padding": 15,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <NetworkImage
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Object {
          "borderRadius": 2,
          "height": 80,
          "width": 60,
        }
      }
    />
    <View
      style={
        Object {
          "alignSelf": "center",
          "flex": 1,
          "paddingHorizontal": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#30363d",
            "fontSize": 14,
            "fontWeight": "800",
          }
        }
      >
        Room
      </Text>
    </View>
  </View>
</View>
`;
